don't rely on language features to construct/destruct instance of InlineBackgroundData. b=373305 r/sr=dbaron